<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:iconTint="@color/grey"
        android:title="@string/title_places"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_questions"
        android:icon="@drawable/ic_sms_black_24dp"
        android:iconTint="@color/grey"
        android:title="@string/title_questions"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:iconTint="@color/grey"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp_2"
        android:iconTint="@color/grey"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom"/>

</menu>
